[package]
name = "phunwrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.74"
clap = { version = "4.3.23", features = ["derive"] }
flume = "0.11.0"
image = "0.24.7"
indicatif = "0.17.6"
ndarray = "0.15.6"
ndarray-npy = { version = "0.8.1", default-features = false }
ndrustfft = "0.4.1"

[profile.release]
opt-level = 3
lto = true
